# kmeans-kdtree

./: .gitignore
code/kmeans/: main.cpp
code/kmeans-kdtree/: CMakeLists.txt  main.cpp
code/kmeans-kdtree/dataset/: data2k.csv
code/kmeans-kdtree/include/: kdtree.hpp  kmeans.hpp
code/kmeans-kdtree/src/: kdtree.cpp  kmeans.cpp
code/kmeans/include/: kmeans.hpp
code/kmeans/src/: kmeans.cpp
document/: main.blg  main.tex
document/bibliography/: references.bib
